--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-    "devDependencies": {
-        "@symfony/stimulus-bridge": "^1.1.0",
-        "@symfony/webpack-encore": "^0.32.0",
-        "core-js": "^3.0.0",
-        "stimulus": "^2.0.0",
-        "regenerator-runtime": "^0.13.2",
-        "webpack-notifier": "^1.6.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    },
-    "dependencies": {
-        "vue": "^2.6.12",
-        "vue-loader": "^15.9.5",
-        "vue-template-compiler": "^2.6.12"
-    }
+  "private": true,
+  "scripts": {
+    "build": "encore production --progress",
+    "dev": "encore dev",
+    "dev-server": "encore dev-server",
+    "watch": "encore dev --watch"
+  },
+  "dependencies": {
+    "@mdi/font": "^3.6.95",
+    "roboto-fontface": "*",
+    "vue": "^2.6.12",
+    "vue-axios": "^3.2.0",
+    "vue-loader": "^15.9.5",
+    "vue-router": "^3.4.9",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify": "^2.2.11"
+  },
+  "devDependencies": {
+    "@symfony/stimulus-bridge": "^1.1.0",
+    "@symfony/webpack-encore": "^0.32.0",
+    "core-js": "^3.0.0",
+    "regenerator-runtime": "^0.13.2",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "stimulus": "^2.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.8",
+    "vuetify-loader": "^1.3.0",
+    "webpack-notifier": "^1.6.0"
+  },
+  "license": "UNLICENSED"
 }
