--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=9c3e4201c1c297ad514ebf17ff400a6d
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/billetera_movil?serverVersion=mariadb-10.4.14"
 ###< doctrine/doctrine-bundle ###
