--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
+    "axios": "^0.21.0",
     "roboto-fontface": "*",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.0",
