--- a/.env
+++ b/.env
@@ -26,3 +26,8 @@ APP_SECRET=9c3e4201c1c297ad514ebf17ff400a6d
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="mysql://root:@127.0.0.1:3306/billetera_movil?serverVersion=mariadb-10.4.14"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://9fe8ab00297e0b:8dafc65aff572c@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
